# lambda-hexagonal-architecture-sample

./: .gitignore  NOTICE  README.md  cdk.json  pyproject.toml  simple-crud-app.py
app/adapters/: dynamodb_query_service.py  dynamodb_unit_of_work.py
app/adapters/internal/: dynamodb_base.py
app/adapters/tests/: test_dynamodb_query_service.py  test_dynamodb_unit_of_work.py
app/domain/command_handlers/: create_product_command_handler.py  delete_product_command_handler.py  update_product_command_handler.py
app/domain/commands/: create_product_command.py  delete_product_command.py  update_product_command.py
app/domain/exceptions/: repository_exception.py
app/domain/model/: product.py  product_version.py
app/domain/ports/: products_query_service.py  unit_of_work.py
app/domain/tests/: test_command_handlers.py
app/entrypoints/api/: config.py  handler.py
app/entrypoints/api/middleware/: exception_handler.py  utils.py
app/entrypoints/api/model/: api_model.py
app/entrypoints/api/tests/: test_api_handler.py
app/libraries/: pyproject.toml
infra/: simple_crud_app_stack.py
infra/app_constructs/: app_project.py  app_project_api.py  app_project_function.py  layers.py
infra/app_constructs/layers/libraries/: requirements.txt
