[tool.poetry]
authors = [
  "Michal Ploski <mploski@amazon.com>",
  "Dominik Goby <dgoby@amazon.de>",
  "Furkan Oruc <furoruc@amazon.de>",
  "Darius Kunce <kunce@amazon.ch>",
]
description = "All external packages used by project"
name = "hexagonal-architecture-python-external-libraries"
version = "0.1.0"

[tool.poetry.dependencies]
aws-lambda-powertools = {extras = ["pydantic"], version = "^1.25.6"}
pydantic = "^1.9.0"
python = ">3.8,<4.0.0"
boto3 = "^1.22.4"
mypy-boto3-dynamodb = "^1.24.0"
